--- a/app/index.html
+++ b/app/index.html
@@ -107,86 +107,147 @@
       </div>
     </div>
 
-    <div id="features" class="page-section page-section--blue">
+     <div id="features" class="page-section page-section--blue">
       <div class="wrapper">
-        <img src="assets/images/icons/star.svg" />
-        <h2>Бидний онцлогууд</h2>
-  
-        <img src="assets/images/icons/rain.svg" />
-        <h3>Бид цаг уурыг аждаг</h3>
-        <p>
-          Манай апп-ыг татаж авч ашиглавал бид танд бороо орохоос 20 минутын өмнө
-          мэдэгдэж байх болно. Бусад мэдээллүүдийг ч цаг тухайд нь авах боломжтой.
-        </p>
-  
-        <img src="assets/images/icons/globe.svg" />
-        <h3>Аяллын лавлах</h3>
-        <p>
-          Таны урд хожид огт сонсож байгаагүй, дэлхий дээрх үзэсгэлэнт газрууд,
-          аялал жуулчлалын гайхалтай хотуудын талаар бид судласан бөгөөд та
-          тэдгээр газруудаас сонгон аялж болно.
-        </p>
-  
-        <img src="assets/images/icons/wifi.svg" />
-        <h3>Wi-Fi-тай цэгүүд</h3>
-        <p>
-          Манай апп-ыг татаж авснаар өөрийн аялж буй газар оронд байгаа үнэгүй
-          wi-fi бүхий цэгүүд, нууц үгсийн мэдээллийг авах боломжтой бөгөөд хэзээ ч
-          холбоо тасрах аюулгүй болох юм.
-        </p>
-  
-        <img src="assets/images/icons/fire.svg" />
-        <h3>Аяллын хэрэгслүүд</h3>
-        <p>
-          Та манай аяллуудаар гурваас дээш удаа аялбал бид танд майхан барих, гал
-          түлэх, хоол хийх, загас барих хэрэгслүүдийг бэлэглэх болно.
-        </p>
+        <h2 class="section-title">
+          <img
+            class="section-title__icon"
+            src="assets/images/icons/star.svg"
+          />Бидний
+          <strong>онцлогууд</strong>
+        </h2>
+        <div class="row row--gutters-large generic-content-conteiner">
+          <div class="row__medium-6">
+            <div class="feature-item">
+              <img
+                class="feature-item__icon"
+                src="assets/images/icons/rain.svg"
+              />
+              <h3 class="feature-item__title">Бид цаг уурыг аждаг</h3>
+              <p>
+                Манай апп-ыг татаж авч ашиглавал бид танд бороо орохоос 20
+                минутын өмнө мэдэгдэж байх болно. Бусад мэдээллүүдийг ч цаг
+                тухайд нь авах боломжтой.
+              </p>
+            </div>
+            <div class="feature-item">
+              <img
+                class="feature-item__icon"
+                src="assets/images/icons/globe.svg"
+              />
+              <h3 class="feature-item__title">Аяллын лавлах</h3>
+              <p>
+                Таны урд хожид огт сонсож байгаагүй, дэлхий дээрх үзэсгэлэнт
+                газрууд, аялал жуулчлалын гайхалтай хотуудын талаар бид судласан
+                бөгөөд та тэдгээр газруудаас сонгон аялж болно.
+              </p>
+            </div>
+          </div>
+          <div class="row__medium-6">
+            <div class="feature-item">
+              <img
+                class="feature-item__icon"
+                src="assets/images/icons/wifi.svg"
+              />
+              <h3 class="feature-item__title">Wi-Fi-тай цэгүүд</h3>
+              <p>
+                Манай апп-ыг татаж авснаар өөрийн аялж буй газар оронд байгаа
+                үнэгүй wi-fi бүхий цэгүүд, нууц үгсийн мэдээллийг авах боломжтой
+                бөгөөд хэзээ ч холбоо тасрах аюулгүй болох юм.
+              </p>
+            </div>
+            <div class="feature-item">
+              <img
+                class="feature-item__icon"
+                src="assets/images/icons/fire.svg"
+              />
+              <h3 class="feature-item__title">Аяллын хэрэгслүүд</h3>
+              <p>
+                Та манай аяллуудаар гурваас дээш удаа аялбал бид танд майхан
+                барих, гал түлэх, хоол хийх, загас барих хэрэгслүүдийг бэлэглэх
+                болно.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
-    <div id="testimonials">
-      <img src="assets/images/icons/comment.svg" />
-      <h2>Хэрэглэгчдийн талархлууд</h2>
+    <div id="testimonials" class="page-section page-section--testimonials">
+      <div class="wrapper wrapper--no-padding-until-medium">
+        <h2 class="section-title section-title--blue">
+          <img
+            class="section-title__icon"
+            src="assets/images/icons/comment.svg"
+          />Хэрэглэгчдийн
+          <strong>талархлууд</strong>
+        </h2>
+        <div
+          class="row row--gutters row--gutters-small row--eqiul-height-at-medium generic-content-conteiner row--t-padding"
+        >
+          <div class="row__medium-4">
+            <div class="testimonial">
+              <div class="testimonial__photo">
+                <img src="assets/images/testimonial-jane.jpg" />
+              </div>
+               <h3 class="testimonial__title">Батчимэг</h3>
+              <h4 class="testimonial__subtitle">9 удаагийн аялагч</h4>
+              <p>
+                &ldquo;Duis aute irure dolor in reprehenderit in voluptate velit
+                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet,
+                consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                ut labore et dolore magna aliqua.&rdquo;
+              </p>
+            </div>
+          </div>
+          <div class="row__medium-4">
+            <div class="testimonial">
+              <div class="testimonial__photo">
+                <img src="assets/images/testimonial-john.jpg" />
+              </div>
+              <h3 class="testimonial__title">Дэлгэрбаяр</h3>
+              <h4 class="testimonial__subtitle">4 удаагийн аялагч</h4>
+              <p>
+                &ldquo; Lorem ipsum dolor sit amet consectetur Duis aute irure
+                dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est
+                laborum. Lorem ipsum dolor sit amet, consectetur.&rdquo;
+              </p>
+            </div>
+          </div>
+          <div class="row__medium-4">
+            <div class="testimonial testimonial--last">
+              <div class="testimonial__photo">
+                <img src="assets/images/testimonial-cat.jpg" />
+              </div>
+              <h3 class="testimonial__title">Шар Том</h3>
+              <h4 class="testimonial__subtitle">6 удаагийн аялагч</h4>
+              <p>
+                &ldquo;Duis aute irure dolor in reprehenderit in voluptate velit
+                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet,
+                consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                ut.&rdquo;
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-      <img src="assets/images/testimonial-jane.jpg" />
-      <h3>Батчимэг</h3>
-      <h3>9 удаагийн аялагч</h3>
-      <p>
-        &ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-        id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing
-        elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-        aliqua.&rdquo;
-      </p>
 
-      <img src="assets/images/testimonial-john.jpg" />
-      <h3>Дэлгэрбаяр</h3>
-      <h3>4 удаагийн аялагч</h3>
-      <p>
-        &ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-        id est laborum. Lorem ipsum dolor sit amet, consectetur.&rdquo;
-      </p>
-
-      <img src="assets/images/testimonial-cat.jpg" />
-      <h3>Шар Том</h3>
-      <h3>6 удаагийн аялагч</h3>
-      <p>
-        &ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-        id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing
-        elit, sed do eiusmod tempor incididunt ut.&rdquo;
-      </p>
-    </div>
-
-    <footer>
-      <p>
-        Copyright &copy; 2019 Platinum Travel. All rights reserved.
-        <a href="#" class="btn btn--orange">Хамт аялах</a>
-      </p>
+     <footer class="site-footer">
+      <div class="wrapper">
+        
+        <p>
+          <span class="site-footer__text">  Copyright &copy; 2019 Platinum Travel. All rights reserved.</span>
+        
+          <a href="#" class="btn btn--orange">Хамт аялах</a>
+        </p>
+      </div>
     </footer>
     <!-- "modal" хичээлийг үзтэлээ энэ тайлбар бүхий хэсгийг битгий нээгээрэй
   <div class="modal">
