--- a/app/index.html
+++ b/app/index.html
@@ -33,9 +33,9 @@
           </div>
           <nav class="primary-nav primary-nav--pull-right">
             <ul>
-              <li><a href="#our-beginning">Эхлэл</a></li>
-              <li><a href="#features">Онцлогууд</a></li>
-              <li><a href="#testimonials">Талархал</a></li>
+              <li><a href="#our-beginning" id="our-beginning-link">Эхлэл</a></li>
+              <li><a href="#features" id="features-link" >Онцлогууд</a></li>
+              <li><a href="#testimonials" id="testimonials-link">Талархал</a></li>
             </ul>
           </nav>
         </div>
@@ -59,7 +59,7 @@
       </div>
     </div>
 
-    <div id="our-beginning" class="page-section">
+    <div id="our-beginning" class="page-section" data-matching-link="#our-beginning-link">
       <div class="wrapper">
         <h2 class="headline headline--centered headline--light headline--b-margin-small">Бид анх <strong>өөрсдийнхөө аяллаар</strong> эхлэж байлаа.</h2>
         <h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">Одоо бид <strong>бусдын аяллыг</strong> дурсамжтай болгохыг зорьж байна.</h3>
@@ -119,7 +119,7 @@
       </div>
     </div>
 
-     <div id="features" class="page-section page-section--blue">
+     <div id="features" class="page-section page-section--blue" data-matching-link="#features-link" >
       <div class="wrapper">
         <h2 class="section-title">
           <img
@@ -185,7 +185,7 @@
       </div>
     </div>
 
-    <div id="testimonials" class="page-section page-section--testimonials">
+    <div id="testimonials" class="page-section page-section--testimonials" data-matching-link="#testimonials-link">
       <div class="wrapper wrapper--no-padding-until-medium">
         <h2 class="section-title section-title--blue">
           <img
